[metadata]
name = mqtt2kasa
version = 0.0.1
summary = MQTT front end wrapper to python-kasa
author = Flavio Fernandes
home-page = https://flaviof.com
classifier =
    Environment :: mqtt2kasa
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    mqtt2kasa

[wheel]
universal = 1
